Import paper outlines

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -9,13 +9,14 @@
 \usepackage{xcolor}
 
 \pdfinfo{
-/Title (Title)
-/Author (Author)}
-\title{Title}
-\author{Author\\
-Affiliation\\
-Email\\
-}
+/Title (Building socket-aware BPF programs)
+/Author (Joe Stringer)}
+
+\title{Building socket-aware BPF programs}
+\author{Joe Stringer}
+\affiliation{%
+      \institution{Cilium.io}}
+\email{joe@cilium.io}
 
 \acmDOI{}
 \setcounter{secnumdepth}{0}
@@ -23,21 +24,22 @@ Email\\
 
 \begin{document}
 
-\maketitle
-
 \begin{abstract}
 
 \end{abstract}
 
+\maketitle
+
 \section{Keywords}
+
+BPF, Linux, packet processing, sockets
 
 \section{Introduction}
 
-\section{Conclusion}
-
 \section{Acknowledgments}
 
+
 \bibliographystyle{plainnat}
-%\bibliography{paper}
+\bibliography{paper}
 
 \end{document}
