Import submitted abstract

--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -60,7 +60,7 @@
    \setcounter{framenumber}{\value{finalframe}}
 }
 
-\title[Example]{Example Title}
+\title[Packet mark in a Cloud Native world]{Packet mark in a Cloud Native world}
 \institute{Cilium.io}
 \author[Joe Stringer]{Joe Stringer}
 
@@ -104,7 +104,7 @@
     \textcolor{red}{#1}
 }
 
-\date[Month XX, 20XX]{Linux Plumbers 20XX, Location}
+\date[August 24-28, 2020]{Linux Plumbers 2020, on the wider Internet}
 
 \begin{document}
     \section*{Introduction}
