--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -100,6 +100,10 @@
     \pause $\rightarrow$
 }
 
+\newcommand\todo[1]{
+    \textcolor{red}{#1}
+}
+
 \date[Month XX, 20XX]{Linux Plumbers 20XX, Location}
 
 \begin{document}
