Improve PDF section references

--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -94,7 +94,6 @@
             \vfill
         \end{frame}
     }
-    \section*{#1}
 }
 
 \newcommand\suspense{
@@ -104,7 +103,7 @@
 \date[Month XX, 20XX]{Linux Plumbers 20XX, Location}
 
 \begin{document}
-    \section*{}
+    \section*{Introduction}
     {\sectioncolor
     \begin{frame}
         \titlepage
@@ -122,13 +121,13 @@
 
     \newsectionpage{Section 2}
 
+    \section*{Prologue}
     \begin{frame}{Summary}
         \begin{itemize}
             \item Point 1
         \end{itemize}
     \end{frame}
 
-    \section*{}
     \begin{frame}{Thank you}
         \centering
         \vfill
