template: Fix section titles
Section titles wouldn't appear at the top of the subsequent slides with
the previous approach. Fix them up.

--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -82,12 +82,11 @@
 }
 
 \newcommand\newsectionpage[1]{
-    \section*{}
+    \section*{#1}
     {\sectioncolor
         \begin{frame}
             \vfill
             \centering
-            \section{#1}
             \begin{beamercolorbox}[sep=8pt,center,shadow=true,rounded=true]{title}
                 \usebeamerfont{title}\insertsectionhead\par%
             \end{beamercolorbox}
