slides: Add CNI plugin logos slide

--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -138,7 +138,9 @@
     \end{frame}
 
     \begin{frame}{Cloud Native networking}
-        \todo{Add logos for all the projects I refer to}
+        \begin{figure}
+            \includegraphics[width=\textwidth]{plugins.png}
+        \end{figure}
     \end{frame}
 
     \newsectionpage{Use cases}
